--- a/components/SearchCapsule.css
+++ b/components/SearchCapsule.css
@@ -1,20 +1,20 @@
 .CardContainer {
-    flex-direction: row;
-    width: 50rem;
-    height: 7rem;
-    margin-top: -3.6rem;
-    z-index: 0;
-    margin-bottom: 20rem;
-    border-width: 3px;
-    border-color: #0195fa;
-    border-radius: 10px;
+    width: 30rem;
+    height: 35rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 1;
+    border-width: 0;
+    border-radius: 10px 0px 0px 10px;
     box-shadow: 10px 10px 10px 10px rgba(210, 210, 250, 0.4);
+    background-color: #7E7EFE;
 }
 
 .CardSearch {
     flex-direction: row;
-    width: 15rem;
-    height: 5rem;
+    width: 10rem;
+    height: 3rem;
     margin: 0.8rem 1rem;
     border-radius: 1rem;
     border: 0;
@@ -22,26 +22,23 @@
 }
 
 .CardSearch:hover {
-    background-color: #cce8ff;
+    background-color: #b1b1fa;
 }
 
 .ChangeButton {
-    margin: 2.2rem 15rem;
-    border: 0;
-    position: absolute;
-    display: flex;
-    align-items: center;
-    z-index: 2;
-    width: 40px;
-    height: 40px;
-    font-weight: bold;
-    border-radius: 100px;
-    background-color: #0195fa;
+    font-size: 30px;
+    color: #7E7EFE;
+}
+
+.ChangeButton:hover {
+    font-size: 30px;
+    color: #5151a3;
+    cursor: pointer;
 }
 
 .CardTime {
     width: 8rem;
-    height: 5rem;
+    height: 3rem;
     margin: 0.8rem 0.5rem;
     border-radius: 1rem;
     border: 0;
@@ -54,11 +51,68 @@
 }
 
 .SubmitButton {
-    width: 8rem;
-    height: 5rem;
-    margin: 0.8rem 0.5rem;
+    width: 26rem;
+    height: 4rem;
     border: 0;
-    border-radius: 1rem;
-    background-color: #0195fa;
-    font-size: 18px;
+    border-radius: 10px;
+    background-color: #4848FE;
+    font-weight: bold;
+    font-size: 20px;
+    z-index: 2;
+}
+
+.SubmitButton:hover {
+    background-color: #3a3ad2;
+}
+
+.SubmitButton:disabled {
+    background-color: #3a3ad2;
+}
+
+.EllipseUnder {
+    z-index: 0;
+    width: 30rem;
+    height: 35rem;
+    background-color: rgba(118, 118, 254, 1);
+    position: absolute;
+    clip-path: ellipse(61% 74% at 100% 74%);
+}
+
+.EllipseUpper {
+    z-index: 1;
+    width: 30rem;
+    height: 35rem;
+    background-color: rgba(110, 110, 254, 1);
+    position: absolute;
+    border-radius: 10px;
+    clip-path: ellipse(59% 72% at 0% 100%)
+}
+
+.SelectContainer {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    width: 26rem;
+    height: 4rem;
+    border-radius: 10px;
+    border: 0;
+    z-index: 2;
+    background-color: #FFF7FC;
+}
+
+.CloseIcon {
+    font-size: 30px;
+    position: absolute;
+    top: 1.3rem;
+    right: 0;
+    margin-right: 2rem;
+    margin-bottom: 3rem;
+    z-index: 1;
+    color: #4747FE;
+}
+
+.CloseIcon:hover {
+    color: #3a3ad2;
+    cursor: pointer;
 }
