--- a/components/SelectModal.css
+++ b/components/SelectModal.css
@@ -1,39 +1,106 @@
 .InsideCard {
-    margin-bottom: 3rem;
-    max-height: 16rem;
+    margin-bottom: 1rem;
+    max-height: 20rem;
+    background-color: rgba(235, 236, 255, 1);
     border: 0 solid;
     overflow-y: auto;
+    position: relative;
+    z-index: 0;
+    scrollbar-color: #4747FE rgba(183, 188, 255, 0.5);
+}
+
+.InsideCardDum {
+    height: 2rem;
+    margin-bottom: -1rem;
+    background-color: rgba(235, 236, 255, 1);
+    border: 0 solid;
+    border-radius: 0;
+    overflow-y: auto;
+    position: relative;
+    z-index: 0;
+}
+
+.SearchForm {
+    margin-bottom: -1rem;
+    z-index: 1;
+    position: relative;
+}
+
+.SearchCard {
+    font-size: 20px;
+    position: relative;
+    border-color: #4747FE;
+    border-width: 3px;
+    border-radius: 20px;
 }
 
 .CardItem {
-    margin-bottom: 1px;
     font-size: 20px;
+    font-weight: 600;
 }
 
 .CardItemFixed {
-    color: #555555;
-    background-color: #d7e1fa;
-    margin-bottom: 1px;
-    border-radius: 20px;
+    color: #222222;
+    background-color: rgb(194, 196, 253);
+    border-radius: 10px;
     font-size: 20px;
+    font-weight: 600;
+    display: flex;
+    justify-content: space-between;
 }
 
 .CardItem:hover {
-    color: #555555;
-    background-color: #e8efff;
-    border-radius: 20px;
+    color: #222222;
+    background-color: rgb(214, 215, 251);
+    border-radius: 10px;
 }
 
 .CardSearch {
     flex-direction: row;
-    width: 15rem;
-    height: 5rem;
-    margin: 0.8rem 1rem;
+    justify-content: center;
+    width: 12rem;
+    height: 2.5rem;
     border-radius: 1rem;
     border: 0;
-    background-color: #e8efff;
+    background-color: #FFF7FC;
 }
 
 .CardSearch:hover {
-    background-color: #cce8ff;
+    background-color: #d6d6fb;
+    cursor: pointer;
+}
+
+.FlagIcon {
+    font-size: 20px;
+    color: #7E7EFE;
+    margin: 0rem 0.5rem;
+}
+
+.CloseIcon {
+    font-size: 30px;
+    position: absolute;
+    top: 1.3rem;
+    right: 0;
+    margin-right: 2rem;
+    z-index: 1;
+    color: #4747FE;
+}
+
+.CloseIcon:hover {
+    color: #3a3ad2;
+    cursor: pointer;
+}
+
+.SelectButton {
+    border: 0;
+    border-radius: 15px;
+    background-color: #4747FE;
+    color: #FFF7FC;
+    font-size: 16px;
+    height: 2rem;
+    width: 4rem;
+}
+
+.SelectButton:hover {
+    background-color: #3a3ad2;
 }
