--- a/components/SelectModal.css
+++ b/components/SelectModal.css
@@ -12,7 +12,8 @@
 
 .InsideCard {
     margin-bottom: 1rem;
-    max-height: 20rem;
+    min-height: 35vh;
+    max-height: 35vh;
     background-color: rgba(235, 236, 255, 1);
     border: 0 solid;
     overflow-y: auto;
