--- a/components/TimePickerModal.css
+++ b/components/TimePickerModal.css
@@ -170,3 +170,25 @@
     font-weight: bold;
     margin: 0rem 0.2rem;
 }
+
+.ModalIn {
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    margin: 1rem 0rem;
+    font-family: "Pretendard Variable", Pretendard, -apple-system, BlinkMacSystemFont, system-ui, Roboto, "Helvetica Neue", "Segoe UI", "Apple SD Gothic Neo", "Noto Sans KR", "Malgun Gothic", "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", sans-serif;
+}
+
+.ModalBody {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    font-family: "Pretendard Variable", Pretendard, -apple-system, BlinkMacSystemFont, system-ui, Roboto, "Helvetica Neue", "Segoe UI", "Apple SD Gothic Neo", "Noto Sans KR", "Malgun Gothic", "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", sans-serif;
+}
+
+.ModalBodyDiv {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
