--- a/components/MadeInfo.css
+++ b/components/MadeInfo.css
@@ -18,3 +18,7 @@
     z-index: 6;
     right: 0;
 }
+
+.ModalBody {
+    font-family: "Pretendard Variable", Pretendard, -apple-system, BlinkMacSystemFont, system-ui, Roboto, "Helvetica Neue", "Segoe UI", "Apple SD Gothic Neo", "Noto Sans KR", "Malgun Gothic", "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", sans-serif;
+}
