--- a/components/SearchCard.css
+++ b/components/SearchCard.css
@@ -1,3 +1,10 @@
+@font-face {
+    font-family: 'Pretendard Variable';
+    font-weight: 400;
+    font-style: normal;
+    src: url('../public/PretendardVariable.woff2') format('woff2');
+}
+
 @media (max-width: 767px) {
     .ImageContainer {
         display: none;
@@ -114,4 +121,10 @@
     max-width: 100vw;
     position: relative;
     background-color: #ebecff;
+    -ms-user-select: none;
+    -moz-user-select: -moz-none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    user-select: none;
+    font-family: "Pretendard Variable", Pretendard, -apple-system, BlinkMacSystemFont, system-ui, Roboto, "Helvetica Neue", "Segoe UI", "Apple SD Gothic Neo", "Noto Sans KR", "Malgun Gothic", "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", sans-serif;
 }
