--- a/components/SelectModal.css
+++ b/components/SelectModal.css
@@ -20,6 +20,7 @@
     position: relative;
     z-index: 0;
     scrollbar-color: #4747FE rgba(183, 188, 255, 0.5);
+    font-family: "Pretendard Variable", Pretendard, -apple-system, BlinkMacSystemFont, system-ui, Roboto, "Helvetica Neue", "Segoe UI", "Apple SD Gothic Neo", "Noto Sans KR", "Malgun Gothic", "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", sans-serif;
 }
 
 .InsideCardDum {
@@ -37,6 +38,7 @@
     margin-bottom: -1rem;
     z-index: 1;
     position: relative;
+    font-family: "Pretendard Variable", Pretendard, -apple-system, BlinkMacSystemFont, system-ui, Roboto, "Helvetica Neue", "Segoe UI", "Apple SD Gothic Neo", "Noto Sans KR", "Malgun Gothic", "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", sans-serif;
 }
 
 .SearchCard {
@@ -119,4 +121,12 @@
 
 .SelectButton:hover {
     background-color: #3a3ad2;
+}
+
+.ModalDiv {
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    margin: 1rem 0rem;
+    font-family: "Pretendard Variable", Pretendard, -apple-system, BlinkMacSystemFont, system-ui, Roboto, "Helvetica Neue", "Segoe UI", "Apple SD Gothic Neo", "Noto Sans KR", "Malgun Gothic", "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", sans-serif;
 }
