--- a/components/TimePickerModal.css
+++ b/components/TimePickerModal.css
@@ -73,8 +73,7 @@
         font-size: 2rem;
         font-weight: bold;
         color: #4747FE;
-        margin-left: 1rem;
-        margin-top: 0rem;
+        margin-left: 1vw;
     }
     .UnderArrow:hover {
         background-color: #d6d6fb;
@@ -85,8 +84,7 @@
         font-size: 2rem;
         font-weight: bold;
         color: #4747FE;
-        margin-left: 1rem;
-        margin-bottom: 0rem;
+        margin-left: 1vw;
     }
     .Arrow:hover {
         background-color: #d6d6fb;
